Fix chat input line height Fix preloader overflow

--- a/src/scss/partials/_preloader.scss
+++ b/src/scss/partials/_preloader.scss
@@ -36,6 +36,7 @@ $transition: .2s ease-in-out;
     height: 54px;
     display: flex;
     cursor: pointer;
+    overflow: hidden; // * fix overflow of rotate
 
     opacity: 0;
     transform: scale(0);
